style/style.css
* {
  margin: 0;
  padding: 0;
}

div {
  display: flex;
  justify-content: space-around;
}

#button {
  margin-top: 40px;
  margin-left: -450px;
  width: 1350px;
  height: 790px;
  background-image: url("../images/wooden-texture.jpeg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border: none;
  box-shadow: 10px 10px 2px rgba(25, 25, 25, 0.9);
  cursor: pointer;
  position: absolute;
  transition-duration: 1s;
}

#button:hover {
  transform: translateX(-300px);
  transition-duration: 1s;
}

#game-presentation {
  display: none;
  position: absolute;
}

#game img {
  width: 300px;
}

#music {
  margin-top: 10px;
  margin-bottom: 20px;
  text-align: center;
  cursor: pointer;
  font-size: 25px;
  display: none;
  color: rgb(16, 71, 64);
  font-weight: bold;
}

#ambient {
  text-align: center;
  cursor: pointer;
  font-size: 25px;
  display: none;
  color: rgb(116, 48, 9);
  font-weight: bold;
}

p::selection {
  background: transparent;
}

p:active {
  text-shadow: 0px 0px 2px rgba(25, 25, 25, 0.9);
}

#canvas {
  margin-left: 0;
  margin-top: 25px;
  background-color: #289e47;
  background-image: url("../images/table-back-ground.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border: 40px solid #6e3e0b;
}

